[package]
name = "nebbiolo"
version = "0.0.0"
edition = "2024"
license = "MIT" 
authors = ["myyrakle <sssang97@naver.com>"] 
description = "ready" 
keywords = [] 
include = ["src/*", "Cargo.toml"]
exclude = []
readme = "README.md" 
repository = "https://github.com/myyrakle/nebbiolo"
documentation = "https://github.com/myyrakle/nebbiolo/blob/master/README.md"
homepage = "https://github.com/myyrakle/nebbiolo/blob/master/README.md"


[dependencies]
